--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,15 +14,10 @@
   <script src="lib/jasmine-2.4.1/jasmine-jquery.js"></script>
 
   <!-- include source files here... -->
-  <!--<script src="src/Player.js"></script> -->
-  <!--script src="src/Song.js"></script>-->
-  <script src="src/Calculator.js"></script>
+  <script src="src/Box.js"></script>
 
   <!-- include spec files here... -->
-  <!--script src="spec/SpecHelper.js"></script>-->
-  <!--script src="spec/PlayerSpec.js"></script>-->
-  <script src="spec/CalculatorSpec.js"></script>
-
+  <script src="spec/BoxSpec.js"></script>
 </head>
 
 <body>
